Migrate examples project to Gradle subproject

--- a/settings.gradle
+++ b/settings.gradle
@@ -37,5 +37,14 @@ file('modules').eachDir { dir ->
     project(":${dir.name}").projectDir = dir
 }
 
+file('examples').eachDir { dir ->
+    if (dir.name == 'build') {
+        return
+    }
+
+    include "examples:${dir.name}"
+    project(":examples:${dir.name}").projectDir = dir
+}
+
 include "docs-examples"
 project(":docs-examples").projectDir = file("docs/examples")
