--- a/examples/linked-container/build.gradle
+++ b/examples/linked-container/build.gradle
@@ -1,8 +1,16 @@
+plugins {
+    id 'java'
+}
+
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.12.1'
     compile 'org.json:json:20180813'
     testCompile 'org.postgresql:postgresql:42.2.5'
     testCompile 'ch.qos.logback:logback-classic:1.2.3'
-    testCompile project(':postgresql')
+    testCompile 'org.testcontainers:postgresql'
     compileOnly 'org.slf4j:slf4j-api:1.7.25'
 }
