--- a/examples/selenium-container/build.gradle
+++ b/examples/selenium-container/build.gradle
@@ -1,8 +1,16 @@
+plugins {
+    id 'java'
+}
+
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile 'org.seleniumhq.selenium:selenium-remote-driver:3.14.0'
     compile 'org.seleniumhq.selenium:selenium-firefox-driver:3.14.0'
     compile 'org.seleniumhq.selenium:selenium-chrome-driver:3.14.0'
     compile 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
     testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
-    testCompile project(':selenium')
+    testCompile 'org.testcontainers:selenium'
 }
