Fix includedBuild approach

--- a/examples/disque-job-queue/build.gradle
+++ b/examples/disque-job-queue/build.gradle
@@ -7,11 +7,12 @@ repositories {
 }
 
 dependencies {
-    compile 'biz.paluch.redis:spinach:0.3'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'com.google.guava:guava:23.0'
-    testCompile 'ch.qos.logback:logback-classic:1.2.3'
-    testCompile 'org.mockito:mockito-all:1.10.19'
-    testCompile 'org.testcontainers:testcontainers'
     compileOnly 'org.slf4j:slf4j-api:1.7.25'
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    implementation 'biz.paluch.redis:spinach:0.3'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.guava:guava:23.0'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
+    testImplementation 'org.testcontainers:testcontainers'
 }
