--- a/examples/spring-boot/build.gradle
+++ b/examples/spring-boot/build.gradle
@@ -2,15 +2,14 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.1.2.RELEASE'
 }
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     jcenter()
 }
 
-//apply plugin: 'org.springframework.boot'
-//apply plugin: 'io.spring.dependency-management'
-
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.4'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
