Update dependabot config, add Travis

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -80,9 +80,6 @@ update_configs:
     update_schedule: "daily"
 
 # Examples
-  - package_manager: "java:maven"
+  - package_manager: "java:gradle"
     directory: "/examples"
     update_schedule: "daily"
-    automerged_updates:
-      - match: { dependency_type: "development", update_type: "all" }
-      - match: { dependency_type: "production", update_type: "all" }
