--- a/settings.gradle
+++ b/settings.gradle
@@ -39,3 +39,5 @@ file('modules').eachDir { dir ->
 
 include "docs-examples"
 project(":docs-examples").projectDir = file("docs/examples")
+
+include 'examples'
