Migrate singleton-container example
Also fix identation in singleton-container sources

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -8,6 +8,7 @@ include(
     'redis-backed-cache',
     'redis-backed-cache-testng',
     'selenium-container',
+    'singleton-container',
     'spring-boot'
 )
 
