Fix missing spring-boot plugin in selenium-container example

--- a/examples/selenium-container/build.gradle
+++ b/examples/selenium-container/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.1.2.RELEASE'
 }
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     jcenter()
@@ -10,7 +12,7 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-remote-driver:3.14.0'
     implementation 'org.seleniumhq.selenium:selenium-firefox-driver:3.14.0'
     implementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.14.0'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.2.RELEASE'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.2.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:selenium'
 }
